--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: php-webapp
 spec:
-  replicas: 1 
+  replicas: 1
   selector:
     matchLabels:
       app: php-webapp
@@ -14,19 +14,18 @@ spec:
     spec:
       containers:
         - name: php-webapp
-          image: ghcr.io/carissaura/myphp-app/myphp-app:latest
+          image: ghcr.io/carissaura/myphp-app:latest
           ports:
             - containerPort: 80
----
-apiVersion: v1 
-kind: Service 
+--- 
+apiVersion: v1
+kind: Service
 metadata:
-  name: php-webapp-service 
+  name: php-webapp-service
 spec:
-  type: LoadBalancer 
+  type: LoadBalancer
   selector:
-    app: php-webapp 
+    app: php-webapp
   ports:
-    - port: 80 
-
-      targetPort: 80 
+    - port: 80
+      targetPort: 80
